tests/positive/basic/import_transitive/b.ci
int fromB() { return 7; }
