tests/negative/semantic/structure_name_lowercase/input.ci
structure point {
    int x = 0;
}
void main() {}
